@@ -7,37 +7,44 @@
 
 require File.dirname(__FILE__) + '/spec_base'
 
-require 'rufus/edo'
-
-FileUtils.mkdir('tmp') rescue nil
-
-
-describe 'Rufus::Edo::Cabinet .tcb' do
-
-  before do
-    @db = Rufus::Edo::Cabinet.new('tmp/edo_cabinet_btree_spec.tcb')
-    @db.clear
-  end
-  after do
-    @db.close
-  end
-
-  it 'should accept duplicate values' do
-
-    @db.putdup('a', 'a0')
-    @db.putdup('a', 'a1')
-
-    @db.getdup('a').should.equal([ 'a0', 'a1' ])
-  end
+begin
+  require 'rufus/edo'
+rescue LoadError
+  puts "'TokyoCabinet' ruby bindings not available on this ruby platform"
 end
 
-describe 'Rufus::Edo::Cabinet .tcb methods' do
+if defined?(TokyoCabinet)
 
-  it 'should fail on other structures' do
+  FileUtils.mkdir('tmp') rescue nil
 
-    @db = Rufus::Edo::Cabinet.new('tmp/cabinet_btree_spec.tch')
 
-    lambda { @db.putdup('a', 'a0') }.should.raise(NoMethodError)
+  describe 'Rufus::Edo::Cabinet .tcb' do
+
+    before do
+      @db = Rufus::Edo::Cabinet.new('tmp/edo_cabinet_btree_spec.tcb')
+      @db.clear
+    end
+    after do
+      @db.close
+    end
+
+    it 'should accept duplicate values' do
+
+      @db.putdup('a', 'a0')
+      @db.putdup('a', 'a1')
+
+      @db.getdup('a').should.equal([ 'a0', 'a1' ])
+    end
+  end
+
+  describe 'Rufus::Edo::Cabinet .tcb methods' do
+
+    it 'should fail on other structures' do
+
+      @db = Rufus::Edo::Cabinet.new('tmp/cabinet_btree_spec.tch')
+
+      lambda { @db.putdup('a', 'a0') }.should.raise(NoMethodError)
+    end
   end
 end
 
